Use List.of instead of listOf